--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^0.12.1",
+    "eleventy-plugin-xlsx": "^0.1.3"
   },
   "dependencies": {
-    "glob": "^7.1.6",
     "mammoth": "^1.4.16"
   }
 }
